--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
 
 * {
   border: 1px solid black;
-  border-radius: 2%;
 }
 
 html,
@@ -18,12 +17,10 @@ footer {
   box-sizing: border-box;
 }
 
-/* referencias de cores - https://materialui.co/colors */
-/* color picker - https://www.google.com/search?q=color+picker */
-
 html {
   font-size: 5mm;
   font-family: sans-serif;
+  background-image: url("G:\OneDrive - UFSC\Devinhouse\Módulo 1 - Semana 04\dih_projeto_1_m1\images\background.jpg");
 }
 
 body {
@@ -40,7 +37,7 @@ header {
   width: 100%;
   height: 25mm;
   overflow: hidden;
-  }
+}
 
 header h1 {
   font-size: 1.25rem;
@@ -51,7 +48,7 @@ main {
   width: 250mm;
   max-width: calc(100vw - 50mm);
   padding: 20mm;
-  
+
   flex-grow: 1;
   background-color: white;
 }
@@ -68,13 +65,14 @@ main {
 }
 
 ul.listaTarefas {
-  margin: 5mm 0;
+  margin: 10mm 0;
   list-style: none;
 }
 
 ul.listaTarefas>li {
   margin-bottom: 2.5mm;
   border: 1px solid rgba(0, 0, 0, 0.25);
+  border-radius: 0%;
   padding: 2.5mm;
   display: flex;
 }
@@ -84,8 +82,8 @@ ul.listaTarefas>li:last-child {
 }
 
 ul.listaTarefas>li:hover {
-  border: 1px solid rgba(0, 0, 0, 0.275);
-  background-color: rgba(0, 0, 0, 0.025);
+  border: 3px solid rgba(0, 0, 0, 0.775);
+  background-color: rgba(0, 0, 0, 0.125);
 }
 
 ul.listaTarefas>li>label {
@@ -110,17 +108,15 @@ footer {
 footer p,
 footer a {
   margin: 0;
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 0.75rem;
-  transition: color 200ms;
+  color: rgba(255, 255, 255, 0.849);
+  font-size: .75rem;
+  transition: color 500ms;
 }
 
 footer a:hover {
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(219, 47, 47, 0.555);
 }
 
-@media (max-width: 600px) {
-  main {
-    max-width: 100vw;
-  }
+button text:hover {
+  text-decoration: solid;
 }
